users into resource service and postman request to avoid keycloak forms

--- a/Backend/ms-users/src/main/resources/templates/ValidationEmail.html
+++ b/Backend/ms-users/src/main/resources/templates/ValidationEmail.html
@@ -87,10 +87,10 @@
     Un saludo
 </p>
 </main>
-<p><b>TeamSix DMH</b></p>
+<p><b>Digital House</b></p>
 </div>
 <footer>
-    <h6>©2022 Digital Money House</h6>
+    <h6>©2024 La Duquesa</h6>
     <div className="social">
         <i className="fab fa-facebook"></i>
         <i className="fab fa-linkedin-in"></i>
