fixes for invalid credentials in login and redirect to verify email to change into properties

--- a/Backend/ms-users/src/main/resources/templates/ValidationEmail.html
+++ b/Backend/ms-users/src/main/resources/templates/ValidationEmail.html
@@ -28,12 +28,12 @@
         }
         
         header{
-            background: #255c9c;
+            background: #f9f5b8;
             padding: 15px 50px 5px 40px ;
 
         }
         a:visited, a:link, a:active {
-            color: #255c9c;
+            color: #c15f9a;
         }
 
         div {
@@ -50,7 +50,7 @@
         }
 
         b {
-            color: #255c9c;
+            color: #f9f5b8;
         }
 
         footer{
@@ -69,7 +69,7 @@
 </head>
 <body>
 <header>
-    <img src="https://i.ibb.co/WBcgkYV/Logo.png" alt="Logo" />
+    <img src="https://i.ibb.co/SRW285t/logo-duquesa-1.jpg" alt="Logo" class="logo"/>
 </header>
 <div>
 <p>Hola! <b th:text="${first_name + ' ' + last_name}"></b></p>
@@ -87,7 +87,7 @@
     Un saludo
 </p>
 </main>
-<p><b>Digital House</b></p>
+<p><b>La Duquesa Team</b></p>
 </div>
 <footer>
     <h6>©2024 La Duquesa</h6>
